--- a/LLM_Chap_3/processing_data.ipynb
+++ b/LLM_Chap_3/processing_data.ipynb
@@ -42,100 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "397c32cd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fe25061c0314bc3a15085a59511c2d2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/8.18k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14c5ff42715f460986fc655a7463ac9b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "(…)nthetic_text_to_sql_train.snappy.parquet:   0%|          | 0.00/32.4M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7b61d4f828943ada8df42160989f149",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "(…)ynthetic_text_to_sql_test.snappy.parquet:   0%|          | 0.00/1.90M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f423d13b7fd54213a58e828977ee79ba",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/100000 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf90a4ec99384713b9dcec080f50cf44",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating test split:   0%|          | 0/5851 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['id', 'domain', 'domain_description', 'sql_complexity', 'sql_complexity_description', 'sql_task_type', 'sql_task_type_description', 'sql_prompt', 'sql_context', 'sql', 'sql_explanation'],\n",
-       "        num_rows: 100000\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['id', 'domain', 'domain_description', 'sql_complexity', 'sql_complexity_description', 'sql_task_type', 'sql_task_type_description', 'sql_prompt', 'sql_context', 'sql', 'sql_explanation'],\n",
-       "        num_rows: 5851\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
@@ -218,45 +128,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b81f0cf3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/brook/anaconda3/envs/conda_env/lib/python3.11/site-packages/huggingface_hub/file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "2025-05-18 09:35:23.108464: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-05-18 09:35:37.320362: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'input_ids': <tf.Tensor: shape=(1, 53), dtype=int32, numpy=\n",
-       "array([[  101,  1043,  7677, 22637,  2002, 10993,  3917,  1010,  2132,\n",
-       "         1997,  1996,  2334,  7071,  3131,  1010,  2056,  1996,  2873,\n",
-       "         2001,  4755,  4229,  5467,  1012,   102,  1996,  2132,  1997,\n",
-       "         1996,  2334,  7071,  3131,  1010,  1043,  7677, 22637,  2002,\n",
-       "        10993,  3917,  1010,  2056,  1996,  2873,  4062,  2018,  3478,\n",
-       "         2000, 18235,  2094,  2417,  2644,  4597,  1012,   102]],\n",
-       "      dtype=int32)>, 'token_type_ids': <tf.Tensor: shape=(1, 53), dtype=int32, numpy=\n",
-       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "        0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "        1, 1, 1, 1, 1, 1, 1, 1, 1]], dtype=int32)>, 'attention_mask': <tf.Tensor: shape=(1, 53), dtype=int32, numpy=\n",
-       "array([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "        1, 1, 1, 1, 1, 1, 1, 1, 1]], dtype=int32)>}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import AutoTokenizer\n",
     "\n",
@@ -302,76 +177,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "513042ce",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e6eca9c74804cd99725a097670b49fd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/3668 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d0e4defacbe4f59b4ee31a64eef134d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/408 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6aadfd9e20814ea19ae40d420f7b7d83",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/1725 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx', 'input_ids', 'token_type_ids', 'attention_mask'],\n",
-       "        num_rows: 3668\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx', 'input_ids', 'token_type_ids', 'attention_mask'],\n",
-       "        num_rows: 408\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx', 'input_ids', 'token_type_ids', 'attention_mask'],\n",
-       "        num_rows: 1725\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenized_datasets = raw_datasets.map(tokenize_function, batched=True)\n",
     "tokenized_datasets"
@@ -414,31 +223,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "bd38143c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You're using a BertTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'input_ids': TensorShape([8, 67]),\n",
-       " 'token_type_ids': TensorShape([8, 67]),\n",
-       " 'attention_mask': TensorShape([8, 67]),\n",
-       " 'labels': TensorShape([8])}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch = data_collator(samples)\n",
     "{k: v.shape for k, v in batch.items()}"
@@ -446,23 +234,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4086f815",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/brook/anaconda3/envs/conda_env/lib/python3.11/site-packages/datasets/arrow_dataset.py:400: FutureWarning: The output of `to_tf_dataset` will change when a passing single element list for `labels` or `columns` in the next datasets version. To return a tuple structure rather than dict, pass a single string.\n",
-      "Old behaviour: columns=['a'], labels=['labels'] -> (tf.Tensor, tf.Tensor)  \n",
-      "             : columns='a', labels='labels' -> (tf.Tensor, tf.Tensor)  \n",
-      "New behaviour: columns=['a'],labels=['labels'] -> ({'a': tf.Tensor}, {'labels': tf.Tensor})  \n",
-      "             : columns='a', labels='labels' -> (tf.Tensor, tf.Tensor) \n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf_train_dataset = tokenized_datasets[\"train\"].to_tf_dataset(\n",
     "    columns=[\"attention_mask\", \"input_ids\", \"token_type_ids\"],\n",
@@ -479,6 +254,171 @@
     "    collate_fn=data_collator,\n",
     "    batch_size=8,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f592e87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "from transformers import AutoTokenizer, DataCollatorWithPadding\n",
+    "import numpy as np\n",
+    "\n",
+    "raw_datasets = load_dataset(\"glue\", \"mrpc\")\n",
+    "checkpoint = \"bert-base-uncased\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(checkpoint)\n",
+    "\n",
+    "\n",
+    "def tokenize_function(example):\n",
+    "    return tokenizer(example[\"sentence1\"], example[\"sentence2\"], truncation=True)\n",
+    "\n",
+    "\n",
+    "tokenized_datasets = raw_datasets.map(tokenize_function, batched=True)\n",
+    "\n",
+    "data_collator = DataCollatorWithPadding(tokenizer=tokenizer, return_tensors=\"tf\")\n",
+    "\n",
+    "tf_train_dataset = tokenized_datasets[\"train\"].to_tf_dataset(\n",
+    "    columns=[\"attention_mask\", \"input_ids\", \"token_type_ids\"],\n",
+    "    label_cols=[\"labels\"],\n",
+    "    shuffle=True,\n",
+    "    collate_fn=data_collator,\n",
+    "    batch_size=8,\n",
+    ")\n",
+    "\n",
+    "tf_validation_dataset = tokenized_datasets[\"validation\"].to_tf_dataset(\n",
+    "    columns=[\"attention_mask\", \"input_ids\", \"token_type_ids\"],\n",
+    "    label_cols=[\"labels\"],\n",
+    "    shuffle=False,\n",
+    "    collate_fn=data_collator,\n",
+    "    batch_size=8,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91f61e5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import TFAutoModelForSequenceClassification\n",
+    "\n",
+    "model = TFAutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b199d695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#without setting lower default learning rate and annealing the learning rate\n",
+    "from tensorflow.keras.losses import SparseCategoricalCrossentropy\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer=\"adam\",\n",
+    "    loss=SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")\n",
+    "model.fit(\n",
+    "    tf_train_dataset,\n",
+    "    validation_data=tf_validation_dataset,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38fb8e12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#specifying a lower initial learning rate and using a learning rate scheduler (PolynomialDecay)\n",
+    "\n",
+    "from tensorflow.keras.optimizers.schedules import PolynomialDecay\n",
+    "\n",
+    "batch_size = 8\n",
+    "num_epochs = 3\n",
+    "# The number of training steps is the number of samples in the dataset, divided by the batch size then multiplied\n",
+    "# by the total number of epochs. Note that the tf_train_dataset here is a batched tf.data.Dataset,\n",
+    "# not the original Hugging Face Dataset, so its len() is already num_samples // batch_size.\n",
+    "num_train_steps = len(tf_train_dataset) * num_epochs\n",
+    "lr_scheduler = PolynomialDecay(\n",
+    "    initial_learning_rate=5e-5, end_learning_rate=0.0, decay_steps=num_train_steps\n",
+    ") #note initial_learning_rate is set to 5e-5\n",
+    "# and end_learning_rate is set to 0.0\n",
+    "# The learning rate scheduler is a Keras schedule, so we can pass it directly\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
+    "opt = Adam(learning_rate=lr_scheduler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab4e2c89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#training the model with the new learning rate\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "model = TFAutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=2)\n",
+    "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "model.compile(optimizer=opt, loss=loss, metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb58ebf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fitting the model\n",
+    "# Note that we are using the same tf_train_dataset and tf_validation_dataset as before\n",
+    "model.fit(tf_train_dataset, validation_data=tf_validation_dataset, epochs=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18dfd6fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model.predict with logits\n",
+    "preds = model.predict(tf_validation_dataset)[\"logits\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3ecb6af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#converting logits to probabilities\n",
+    "class_preds = np.argmax(preds, axis=1)\n",
+    "print(preds.shape, class_preds.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10f652b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#metrics\n",
+    "import evaluate\n",
+    "\n",
+    "metric = evaluate.load(\"glue\", \"mrpc\")\n",
+    "metric.compute(predictions=class_preds, references=raw_datasets[\"validation\"][\"label\"])"
    ]
   }
  ],
